--- a/Sources/AboutKit/Resources/de.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/de.lproj/Localizable.strings
@@ -18,7 +18,7 @@
 "Other Apps" = "Weitere Apps";
 "%@ App Icon" = "%@ App Symbol";
 "VIEW" = "ANZEIGEN";
-"View All" = "Alle Anzeigen";
+"View All Apps" = "Alle Anzeigen Apps";
 
 "Check out %@ on the App Store!" = "Schauen Sie sich das %@ im App Store an!";
 
