--- a/Sources/AboutKit/Resources/en.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/en.lproj/Localizable.strings
@@ -18,7 +18,7 @@
 "Other Apps" = "Other Apps";
 "%@ App Icon" = "%@ App Icon";
 "VIEW" = "VIEW";
-"View All" = "View All";
+"View All Apps" = "View All Apps";
 
 "Check out %@ on the App Store!" = "Check out %@ on the App Store!";
 
