--- a/Sources/AboutKit/Resources/es.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/es.lproj/Localizable.strings
@@ -18,7 +18,7 @@
 "Other Apps" = "Otras Aplicaciones";
 "%@ App Icon" = "%@ Icono de la Aplicación";
 "VIEW" = "VER";
-"View All" = "Ver Todas";
+"View All Apps" = "Ver Todas Aplicaciones";
 
 "Check out %@ on the App Store!" = "¡Echa un vistazo al %@ en la App Store!";
 
