--- a/Sources/AboutKit/Resources/fr.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/fr.lproj/Localizable.strings
@@ -18,7 +18,7 @@
 "Other Apps" = "Autres Apps";
 "%@ App Icon" = "%@ Icône d’app";
 "VIEW" = "VOIR";
-"View All" = "Voir Toutes";
+"View All Apps" = "Voir Toutes Apps";
 
 "Check out %@ on the App Store!" = "Découvrez %@ sur l'App Store!";
 
