--- a/Sources/AboutKit/Resources/ro.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/ro.lproj/Localizable.strings
@@ -15,10 +15,10 @@
 
 "View %@ in the App Store" = "Vizualizați %@ în App Store";
 
-"Other Apps" = "Alte Aplicații de la Dezvoltator";
+"Other Apps" = "Alte Aplicații";
 "%@ App Icon" = "%@ Iconiță Aplicație";
 "VIEW" = "VIZUALIZAȚI";
-"View All" = "Vizualizați Toate";
+"View All Apps" = "Vizualizați Toate Aplicații";
 
 "Check out %@ on the App Store!" = "Verificați %@ în App Store!";
 
