--- a/Sources/AboutKit/Resources/Localization/en-AU.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/en-AU.lproj/Localizable.strings
@@ -1,10 +1,17 @@
-/* GENERAL STRINGS */
+/*
+ Localizable.strings
+ AboutKit
+
+ Created by Adam Foot on 06/07/2021.
+
+ */
+
+/* General */
 
 "Continue" = "Continue";
 
 
-
-/* ABOUT STRINGS */
+/* About */
 
 "Email" = "Email";
 "Twitter (@%@)" = "Twitter (@%@)";
@@ -18,17 +25,17 @@
 "Other Apps" = "Other Apps";
 "%@ App Icon" = "%@ App Icon";
 "VIEW" = "VIEW";
-"View All Apps" = "View All Apps";
+"View all Apps" = "View all Apps";
 
 "Check out %@ on the App Store!" = "Check out %@ on the App Store!";
 
 
+/* Navigation */
 
-/* NAVIGATION STRINGS */
 "About" = "About";
 "Done" = "Done";
 
 
+/* Welcome */
 
-/* WELCOME STRINGS */
 "Welcome to" = "Welcome to";
