--- a/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
@@ -1,10 +1,17 @@
-/* GENERAL STRINGS */
+/*
+ Localizable.strings
+ AboutKit
+
+ Created by Adam Foot on 06/07/2021.
+
+ */
+
+/* General */
 
 "Continue" = "Continuar";
 
 
-
-/* ABOUT STRINGS */
+/* About */
 
 "Email" = "Correo Electrónico";
 "Twitter (@%@)" = "Twitter (@%@)";
@@ -18,17 +25,17 @@
 "Other Apps" = "Otras Aplicaciones";
 "%@ App Icon" = "%@ Icono de la Aplicación";
 "VIEW" = "VER";
-"View All Apps" = "Ver Todas Aplicaciones";
+"View all Apps" = "Ver todas Aplicaciones";
 
 "Check out %@ on the App Store!" = "¡Echa un vistazo al %@ en la App Store!";
 
 
+/* Navigation */
 
-/* NAVIGATION STRINGS */
 "About" = "Acerca de";
 "Done" = "Listo";
 
 
+/* Welcome */
 
-/* WELCOME STRINGS */
 "Welcome to" = "Bienvenido a";
