--- a/Sources/AboutKit/Resources/Localization/ro.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ro.lproj/Localizable.strings
@@ -1,10 +1,17 @@
-/* GENERAL STRINGS */
+/*
+ Localizable.strings
+ AboutKit
+
+ Created by Adam Foot on 06/07/2021.
+
+ */
+
+/* General */
 
 "Continue" = "Continua";
 
 
-
-/* ABOUT STRINGS */
+/* About */
 
 "Email" = "E-mail";
 "Twitter (@%@)" = "Twitter (@%@)";
@@ -18,17 +25,17 @@
 "Other Apps" = "Alte Aplicații";
 "%@ App Icon" = "%@ Iconiță Aplicație";
 "VIEW" = "VIZUALIZAȚI";
-"View All Apps" = "Vizualizați Toate Aplicații";
+"View all Apps" = "Vizualizați toate Aplicații";
 
 "Check out %@ on the App Store!" = "Verificați %@ în App Store!";
 
 
+/* Navigation */
 
-/* NAVIGATION STRINGS */
 "About" = "Despre";
 "Done" = "Gata";
 
 
+/* Welcome */
 
-/* WELCOME STRINGS */
 "Welcome to" = "Bun venit pe";
