Added Terms of Use

--- a/Sources/AboutKit/Resources/Localization/cs.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/cs.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Sdílet Aplikaci";
 "Write Review" = "Napsat Recenzi";
 "Privacy Policy" = "Zásady ochrany osobních údajů";
+"Terms Of Use" = "Podmínky Použití";
 
 "View %@ in the App Store" = "Zobrazit %@ v App Store";
 
