--- a/Sources/AboutKit/Resources/Localization/de.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/de.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "Share App" = "App Teilen";
 "Write Review" = "Bewertung Schreiben";
 "Privacy Policy" = "Datenschutzrichtlinie";
+"Terms Of Use" = "Nutzungsbedingungen";
 
 "View %@ in the App Store" = "%@ im App Store anzeigen";
 
