--- a/Sources/AboutKit/Resources/Localization/fr.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/fr.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Partager l’app";
 "Write Review" = "Écrire un Commentaire";
 "Privacy Policy" = "Politique de Confidentialité";
+"Terms Of Use" = "Conditions d'utilisation";
 
 "View %@ in the App Store" = "Voir %@ dans l'App Store";
 
