--- a/Sources/AboutKit/Resources/Localization/he.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/he.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "שתף אפליקציה";
 "Write Review" = "כתוב ביקורת";
 "Privacy Policy" = "מדיניות פרטיות";
+"Terms Of Use" = "תנאי שימוש";
 
 "View %@ in the App Store" = "צפה ב- %@ ב- App Store";
 
