--- a/Sources/AboutKit/Resources/Localization/it.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/it.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Condividi App";
 "Write Review" = "Scrivere una Recensione";
 "Privacy Policy" = "Politica sulla Riservatezza";
+"Terms Of Use" = "Termini di Utilizzo";
 
 "View %@ in the App Store" = "Visualizza %@ nell'App Store";
 
