--- a/Sources/AboutKit/Resources/Localization/ko.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ko.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "앱 공유";
 "Write Review" = "리뷰를 쓰다";
 "Privacy Policy" = "개인 정보 정책";
+"Terms Of Use" = "이용약관";
 
 "View %@ in the App Store" = "App Store에서 %@보기";
 
