--- a/Sources/AboutKit/Resources/Localization/nl.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/nl.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Deel App";
 "Write Review" = "Schrijf Recensie";
 "Privacy Policy" = "Privacybeleid";
+"Terms Of Use" = "Gebruiksvoorwaarden";
 
 "View %@ in the App Store" = "Bekijk %@ in de App Store";
 
