--- a/Sources/AboutKit/Resources/Localization/pl.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/pl.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Udostępnij Aplikacje";
 "Write Review" = "Napisać Recenzję";
 "Privacy Policy" = "Polityka Prywatności";
+"Terms Of Use" = "Warunki Korzystania";
 
 "View %@ in the App Store" = "Wyświetl %@ w App Store";
 
