--- a/Sources/AboutKit/Resources/Localization/pt-BR.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/pt-BR.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Compartilhe o Aplicativo";
 "Write Review" = "Escrever Análise";
 "Privacy Policy" = "Política de Privacidade";
+"Terms Of Use" = "Termos de Uso";
 
 "View %@ in the App Store" = "Veja %@ na App Store";
 
