--- a/Sources/AboutKit/Resources/Localization/ro.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ro.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Partajază Aplicație";
 "Write Review" = "Scrie un Review";
 "Privacy Policy" = "Termeni și Condiții";
+"Terms Of Use" = "Termeni de Utilizare";
 
 "View %@ in the App Store" = "Vizualizați %@ în App Store";
 
