--- a/Sources/AboutKit/Resources/Localization/ru.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ru.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Поделиться приложением";
 "Write Review" = "Написать обзор";
 "Privacy Policy" = "Политика конфиденциальности";
+"Terms Of Use" = "Условия эксплуатации";
 
 "View %@ in the App Store" = "Посмотреть %@ в App Store";
 
