--- a/Sources/AboutKit/Resources/Localization/vi.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/vi.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Chia sẻ ứng dụng";
 "Write Review" = "Viết đánh giá";
 "Privacy Policy" = "Chính sách bảo mật";
+"Terms Of Use" = "Điều khoản sử dụng";
 
 "View %@ in the App Store" = "Xem %@ trong App Store";
 
