--- a/Sources/AboutKit/Resources/Localization/ar.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ar.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "شارك التطبيق";
 "Write Review" = "أكتب مراجعة";
 "Privacy Policy" = "سياسة الخصوصية";
+"Terms Of Use" = "تعليمات الاستخدام";
 
 "View %@ in the App Store" = "عرض %@ في متجر التطبيقات";
 
