--- a/Sources/AboutKit/Resources/Localization/en-AU.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/en-AU.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Share App";
 "Write Review" = "Write Review";
 "Privacy Policy" = "Privacy Policy";
+"Terms Of Use" = "Terms Of Use";
 
 "View %@ in the App Store" = "View %@ in the App Store";
 
