--- a/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "Share App" = "Compartir Aplicación";
 "Write Review" = "Escribir una Reseña";
 "Privacy Policy" = "Política de Privacidad";
+"Terms Of Use" = "Términos de Uso";
 
 "View %@ in the App Store" = "Ver %@ en la App Store";
 
