Added Mac support

--- a/Sources/AboutKit/Resources/Localization/ar.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ar.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "تحقق من %@ في متجر التطبيقات!";
 
+"Contact Developer…" = "اتصل بالمطور…";
+"Open Website…" = "فتح موقع…";
+"View Profile…" = "عرض الصفحة الشخصية…";
+"Share…" = "يشارك…";
+"Review…" = "مراجعة…";
+"View Privacy Policy…" = "عرض سياسة الخصوصية…";
+"View Terms of Use…" = "عرض شروط الاستخدام…";
+"View…" = "منظر…";
+
 
 /* Navigation */
 
