--- a/Sources/AboutKit/Resources/Localization/cs.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/cs.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "Podívejte se na %@ v App Store!";
 
+"Contact Developer…" = "Kontaktujte vývojáře…";
+"Open Website…" = "Otevřít web…";
+"View Profile…" = "Prohlédnout profil…";
+"Share…" = "Podíl…";
+"Review…" = "Posouzení…";
+"View Privacy Policy…" = "Zobrazit zásady ochrany osobních údajů…";
+"View Terms of Use…" = "Zobrazit podmínky použití…";
+"View…" = "Pohled…";
+
 
 /* Navigation */
 
