--- a/Sources/AboutKit/Resources/Localization/de.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/de.lproj/Localizable.strings
@@ -21,6 +21,15 @@
 
 "Check out %@ on the App Store!" = "Schauen Sie sich das %@ im App Store an!";
 
+"Contact Developer…" = "Entwickler Kontaktieren…";
+"Open Website…" = "Webseite Öffnen…";
+"View Profile…" = "Profil Anzeigen…";
+"Share…" = "Aktie…";
+"Review…" = "Rezension…";
+"View Privacy Policy…" = "Datenschutzrichtlinie Anzeigen…";
+"View Terms of Use…" = "Nutzungsbedingungen Anzeigen…";
+"View…" = "Sicht…";
+
 
 /* Navigation */
 
