--- a/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "¡Echa un vistazo al %@ en la App Store!";
 
+"Contact Developer…" = "Contactar al Desarrollador…";
+"Open Website…" = "Abrir Sitio Web…";
+"View Profile…" = "Ver Perfil…";
+"Share…" = "Compartir…";
+"Review…" = "Revisar…";
+"View Privacy Policy…" = "Ver Política de Privacidad…";
+"View Terms of Use…" = "Ver Términos de Uso...";
+"View…" = "Vista…";
+
 
 /* Navigation */
 
