--- a/Sources/AboutKit/Resources/Localization/he.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/he.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "צפה ב- %@ ב- App Store!";
 
+"Contact Developer…" = "צור קשר עם המפתח…";
+"Open Website…" = "פתח את האתר…";
+"View Profile…" = "צפה בפרופיל…";
+"Share…" = "לַחֲלוֹק…";
+"Review…" = "סקירה…";
+"View Privacy Policy…" = "הצג את מדיניות הפרטיות…";
+"View Terms of Use…" = "צפה בתנאי השימוש…";
+"View…" = "נוף…";
+
 
 /* Navigation */
 
