--- a/Sources/AboutKit/Resources/Localization/pl.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/pl.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "Sprawdź %@ w App Store!";
 
+"Contact Developer…" = "Skontaktuj się z Programistą…";
+"Open Website…" = "Otwórz Witrynę…";
+"View Profile…" = "Zobacz Profil…";
+"Share…" = "Udział…";
+"Review…" = "Recenzja…";
+"View Privacy Policy…" = "Zobacz Politykę Prywatności…";
+"View Terms of Use…" = "Wyświetl Warunki Użytkowania…";
+"View…" = "Pogląd…";
+
 
 /* Navigation */
 
