--- a/Sources/AboutKit/Resources/Localization/ro.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ro.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "Verificați %@ în App Store!";
 
+"Contact Developer…" = "Contactați dezvoltatorul…";
+"Open Website…" = "Deschide Site-ul…";
+"View Profile…" = "Vezi Profil…";
+"Share…" = "Acțiune…";
+"Review…" = "Revizuire…";
+"View Privacy Policy…" = "Vedeți Politica de Confidențialitate…";
+"View Terms of Use…" = "Vedeți Termenii de Utilizare…";
+"View…" = "Vedere…";
+
 
 /* Navigation */
 
