--- a/Sources/AboutKit/Resources/Localization/ru.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ru.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "Проверьте %@ в App Store!";
 
+"Contact Developer…" = "Связаться с разработчиком…";
+"Open Website…" = "Открыть веб-сайт…";
+"View Profile…" = "Просмотреть профиль…";
+"Share…" = "Делиться…";
+"Review…" = "Обзор…";
+"View Privacy Policy…" = "Посмотреть политику конфиденциальности…";
+"View Terms of Use…" = "Посмотреть Условия использования…";
+"View…" = "Вид…";
+
 
 /* Navigation */
 
