--- a/Sources/AboutKit/Resources/Localization/vi.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/vi.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "Xem %@ trên App Store!";
 
+"Contact Developer…" = "Liên hệ với Nhà phát triển…";
+"Open Website…" = "Mở trang web…";
+"View Profile…" = "Xem hồ sơ…";
+"Share…" = "Chia sẻ…";
+"Review…" = "Ôn tập…";
+"View Privacy Policy…" = "Xem Chính sách bảo mật…";
+"View Terms of Use…" = "Xem Điều khoản sử dụng…";
+"View…" = "Xem…";
+
 
 /* Navigation */
 
