--- a/Sources/AboutKit/Resources/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/zh-Hans.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "在 App Store 上查看 %@！";
 
+"Contact Developer…" = "联系开发商…";
+"Open Website…" = "打开网站…";
+"View Profile…" = "查看资料…";
+"Share…" = "分享…";
+"Review…" = "审查…";
+"View Privacy Policy…" = "查看隐私政策…";
+"View Terms of Use…" = "查看使用条款…";
+"View…" = "看法…";
+
 
 /* Navigation */
 
