--- a/Sources/AboutKit/Resources/Localization/en-GB.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/en-GB.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "Check out %@ on the App Store!";
 
+"Contact Developer…" = "Contact Developer…";
+"Open Website…" = "Open Website…";
+"View Profile…" = "View Profile…";
+"Share…" = "Share…";
+"Review…" = "Review…";
+"View Privacy Policy…" = "View Privacy Policy…";
+"View Terms of Use…" = "View Terms of Use…";
+"View…" = "View…";
+
 
 /* Navigation */
 
