--- a/Sources/AboutKit/Resources/Localization/nl.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/nl.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "Bekijk %@ in de App Store!";
 
+"Contact Developer…" = "Neem Contact op Met Ontwikkelaar...";
+"Open Website…" = "Website Openen…";
+"View Profile…" = "Bekijk Profiel…";
+"Share…" = "Deel…";
+"Review…" = "Beoordeling…";
+"View Privacy Policy…" = "Privacybeleid Bekijken...";
+"View Terms of Use…" = "Gebruiksvoorwaarden Bekijken...";
+"View…" = "Weergave…";
+
 
 /* Navigation */
 
