--- a/Sources/AboutKit/Resources/Localization/pt-PT.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/pt-PT.lproj/Localizable.strings
@@ -29,6 +29,15 @@
 
 "Check out %@ on the App Store!" = "Confira o %@ na App Store!";
 
+"Contact Developer…" = "Entre em Contato com o Desenvolvedor…";
+"Open Website…" = "Abrir Site…";
+"View Profile…" = "Ver Perfil…";
+"Share…" = "Compartilhar…";
+"Review…" = "Análise…";
+"View Privacy Policy…" = "Ver Política de Privacidade…";
+"View Terms of Use…" = "Veja os Termos de Uso…";
+"View…" = "Visualizar…";
+
 
 /* Navigation */
 
