--- a/Sources/AboutKit/Resources/Localization/cs.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/cs.lproj/Localizable.strings
@@ -6,11 +6,6 @@
 
  */
 
-/* General */
-
-"Continue" = "Pokračovat";
-
-
 /* About */
 
 "Email" = "E-mailem";
@@ -24,7 +19,7 @@
 "View %@ in the App Store" = "Zobrazit %@ v App Store";
 
 "Other Apps" = "Další Aplikace";
-"VIEW" = "POHLED";
+"View" = "Pohled";
 "View all Apps" = "Zobrazit všechny Aplikace";
 
 "Check out %@ on the App Store!" = "Podívejte se na %@ v App Store!";
@@ -42,9 +37,3 @@
 /* Navigation */
 
 "About" = "O Aplikaci";
-"Done" = "Hotovo";
-
-
-/* Welcome */
-
-"Welcome to" = "Vítejte v aplikaci";
