--- a/Sources/AboutKit/Resources/Localization/fr.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/fr.lproj/Localizable.strings
@@ -6,11 +6,6 @@
 
  */
 
-/* General */
-
-"Continue" = "Continuez";
-
-
 /* About */
 
 "Email" = "E-mail";
@@ -24,7 +19,7 @@
 "View %@ in the App Store" = "Voir %@ dans l'App Store";
 
 "Other Apps" = "Autres Apps";
-"VIEW" = "VOIR";
+"View" = "Voir";
 "View all Apps" = "Voir toutes Apps";
 
 "Check out %@ on the App Store!" = "Découvrez %@ sur l'App Store!";
@@ -42,9 +37,3 @@
 /* Navigation */
 
 "About" = "À Propos";
-"Done" = "Valider";
-
-
-/* Welcome */
-
-"Welcome to" = "Bienvenue sur";
