--- a/Sources/AboutKit/Resources/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/zh-Hans.lproj/Localizable.strings
@@ -6,11 +6,6 @@
 
  */
 
-/* General */
-
-"Continue" = "继续";
-
-
 /* About */
 
 "Email" = "电子邮件";
@@ -24,7 +19,7 @@
 "View %@ in the App Store" = "在 App Store 中查看 %@";
 
 "Other Apps" = "其他应用";
-"VIEW" = "看法";
+"View" = "看法";
 "View all Apps" = "查看所有应用";
 
 "Check out %@ on the App Store!" = "在 App Store 上查看 %@！";
@@ -42,9 +37,3 @@
 /* Navigation */
 
 "About" = "关于";
-"Done" = "完毕";
-
-
-/* Welcome */
-
-"Welcome to" = "欢迎来到";
