Added the ability to add an acknowledgements section where you can add details about frameworks or people you'd like to acknowledge for your app.

--- a/Sources/AboutKit/Resources/Localization/ar.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ar.lproj/Localizable.strings
@@ -37,3 +37,18 @@
 /* Navigation */
 
 "About" = "حول";
+"Done" = "منجز";
+
+
+/* Acknowledgements */
+
+"Acknowledgements" = "شكر وتقدير";
+"View Acknowledgements…" = "عرض شكر وتقدير…";
+"People" = "الناس";
+"Frameworks" = "إطار أعمال";
+"Links" = "الروابط";
+"Profiles" = "مظهر";
+"Details" = "تفاصيل";
+"Product Page" = "صفحة المنتج";
+"Repository" = "مخزن";
+"Compliance" = "امتثال";
