--- a/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
@@ -37,3 +37,18 @@
 /* Navigation */
 
 "About" = "Acerca de";
+"Done" = "Listo";
+
+
+/* Acknowledgements */
+
+"Acknowledgements" = "Agradecimientos";
+"View Acknowledgements…" = "Ver Reconocimientos…";
+"People" = "Gente";
+"Frameworks" = "Marcos";
+"Links" = "Enlaces";
+"Profiles" = "Perfiles";
+"Details" = "Detalles";
+"Product Page" = "Página del producto";
+"Repository" = "Repositorio";
+"Compliance" = "Cumplimiento";
