--- a/Sources/AboutKit/Resources/Localization/nl.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/nl.lproj/Localizable.strings
@@ -37,3 +37,18 @@
 /* Navigation */
 
 "About" = "Over";
+"Done" = "Gedaan";
+
+
+/* Acknowledgements */
+
+"Acknowledgements" = "Dankbetuigingen";
+"View Acknowledgements…" = "Dankbetuigingen Bekijken…";
+"People" = "Mensen";
+"Frameworks" = "Kaders";
+"Links" = "Koppelingen";
+"Profiles" = "Profielen";
+"Details" = "Details";
+"Product Page" = "Productpagina";
+"Repository" = "Opslagplaats";
+"Compliance" = "Naleving";
