--- a/Sources/AboutKit/Resources/Localization/en.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/en.lproj/Localizable.strings
@@ -37,3 +37,18 @@
 /* Navigation */
 
 "About" = "About";
+"Done" = "Done";
+
+
+/* Acknowledgements */
+
+"Acknowledgements" = "Acknowledgements";
+"View Acknowledgements…" = "View Acknowledgements…";
+"People" = "People";
+"Frameworks" = "Frameworks";
+"Links" = "Links";
+"Profiles" = "Profiles";
+"Details" = "Details";
+"Product Page" = "Product Page";
+"Repository" = "Repository";
+"Compliance" = "Compliance";
