--- a/Sources/AboutKit/Resources/Localization/ko.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ko.lproj/Localizable.strings
@@ -37,3 +37,18 @@
 /* Navigation */
 
 "About" = "앱에 관해";
+"Done" = "끝난";
+
+
+/* Acknowledgements */
+
+"Acknowledgements" = "감사의 말";
+"View Acknowledgements…" = "승인 보기…";
+"People" = "사람들";
+"Frameworks" = "프레임워크";
+"Links" = "연결";
+"Profiles" = "프로필";
+"Details" = "세부";
+"Product Page" = "제품 페이지";
+"Repository" = "저장소";
+"Compliance" = "규정 준수";
